# haskell

./: README.md
ch01/wc.hsproj/: .uuid
ch01/wc.hsproj/testing-haskell/: Main.hs  _Main.hsplay  testinghaskell.cabal
misctwo.hsproj/: .uuid
misctwo.hsproj/misctwo/: Lists.hs  Main.hs  _Lists.hsplay  _Main.hsplay  misctwo.cabal
